Tribute page finishing touches.

--- a/Projects/freeCodeCamp/responsive-web-design/certificationProjects/tribute-page/index.html
+++ b/Projects/freeCodeCamp/responsive-web-design/certificationProjects/tribute-page/index.html
@@ -19,16 +19,19 @@
         </figure>
         <section id="tribute-info">
             <h3>Some of the great actions of this great man</h3>
-            <ul>
-                <li>Lorem ipsum dolor sit amet.</li>                
-                <li>Lorem ipsum dolor sit amet.</li>                
-                <li>Lorem ipsum dolor sit amet.</li>                
-                <li>Lorem ipsum dolor sit amet.</li>                
-                <li>Lorem ipsum dolor sit amet.</li>                
-                <li>Lorem ipsum dolor sit amet.</li>                
-                <li>Lorem ipsum dolor sit amet.</li>                
-                <li>Lorem ipsum dolor sit amet.</li>                
+            <ul class='tribute-list'>
+                <li>Beat the living crap out of Silco</li>                
+                <li>Saved Violet</li>                
+                <li>Raised Violet, Mako and Clagor</li>                
+                <li>Tried to raise Powder. Nobody could tbh</li>                
+                <li>Hanged up the fighting gloves because he understood peace and family are more important</li>                
+                <li>Looked out for the little guys, whenever he got the chance</li>                
+                <li>He founded the PRI political party</li>                
+                <li>Gave Master Muñoz his first millionaire advice</li>                
             </ul>
+            <q>
+                <em>When people look up to you, you don’t get to be selfish.</em>
+            </q>
         </section>
         <footer>
             <p>
